versioned_docs/version-3.0/client-api/configuration/conventions/request-handling.mdx
---
title: "Conventions related to request handling"
hide_table_of_contents: true
sidebar_label: Request handling
sidebar_position: 5
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];



<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">
#Conventions related to request handling



Instruct the client to do parallel MultiGet processing when handling lazy requests. It is enabled by default.

<TabItem value="use_paraller_multi_get" label="use_paraller_multi_get">
<CodeBlock language="csharp">
{`Conventions.UseParallelMultiGet = true;
`}
</CodeBlock>
</TabItem>


### AllowMultipuleAsyncOperations

Enable or disable multiple async requests per client instance. By default only a single concurrent async request is allowed.

<TabItem value="allow_multiple_async_ops" label="allow_multiple_async_ops">
<CodeBlock language="csharp">
{`Conventions.AllowMultipuleAsyncOperations = false;
`}
</CodeBlock>
</TabItem>

### HandleForbiddenResponseAsync

The async function that begins the handling of forbidden responses.

<TabItem value="handle_forbidden_response_async" label="handle_forbidden_response_async">
<CodeBlock language="csharp">
{`Conventions.HandleForbiddenResponseAsync = (forbiddenResponse, credentials) => 
`}
</CodeBlock>
</TabItem>

### HandleUnauthorizedResponseAsync

It begins the handling of unauthenticated responses, usually by authenticating against the oauth server in async manner.

<TabItem value="handle_unauthorized_response_async" label="handle_unauthorized_response_async">
<CodeBlock language="csharp">
{`Conventions.HandleUnauthorizedResponseAsync = (unauthorizedResponse, credentials) =>
`}
</CodeBlock>
</TabItem>


### CustomizeJsonSerializer

If you need to modify `JsonSerializer` object used by the client you can register a customization action:

<TabItem value="customize_json_serializer" label="customize_json_serializer">
<CodeBlock language="csharp">
{`Conventions.CustomizeJsonSerializer = serializer => \{ \};
`}
</CodeBlock>
</TabItem>

### JsonContractResolver

The default `JsonContractResolver` used by RavenDB will serialize all properties and all public fields. You can change it by providing own implementation of `IContractResolver` interface:

<TabItem value="json_contract_resolver" label="json_contract_resolver">
<CodeBlock language="csharp">
{`Conventions.JsonContractResolver = new CustomJsonContractResolver();
`}
</CodeBlock>
</TabItem>

<TabItem value="custom_json_contract_resolver" label="custom_json_contract_resolver">
<CodeBlock language="csharp">
{`public class CustomJsonContractResolver : IContractResolver
\{
	public JsonContract ResolveContract(Type type)
	\{
		throw new CodeOmitted();
	\}
\}
`}
</CodeBlock>
</TabItem>

### PreserveDocumentPropertiesNotFoundOnModel

Controls whatever properties that were not de-serialized to an object properties will be preserved 
during saving a document again. If `false`, those properties will be removed when the document will be saved. Default: `true`.

<TabItem value="preserve_doc_props_not_found_on_model" label="preserve_doc_props_not_found_on_model">
<CodeBlock language="csharp">
{`Conventions.PreserveDocumentPropertiesNotFoundOnModel = true;
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="java">
#Conventions related to request handling



Instruct the client to do parallel MultiGet processing when handling lazy requests. It is enabled by default.

<TabItem value="use_paraller_multi_get" label="use_paraller_multi_get">
<CodeBlock language="java">
{`conventions.setUseParallelMultiGet(true);
`}
</CodeBlock>
</TabItem>

### HandleForbiddenResponse

The function that begins the handling of forbidden responses.

<TabItem value="handle_forbidden_response" label="handle_forbidden_response">
<CodeBlock language="java">
{`conventions.setHandleForbiddenResponse(new HttpResponseHandler() \{
  @Override
  public Action1<HttpRequest> handle(HttpResponse httpResponse) \{
    return null;
  \}
\});
`}
</CodeBlock>
</TabItem>

### HandleUnauthorizedResponse

It handles of unauthenticated responses, usually by authenticating against the oauth server.

<TabItem value="handle_unauthorized_response" label="handle_unauthorized_response">
<CodeBlock language="java">
{`conventions.setHandleUnauthorizedResponse(new HttpResponseWithMetaHandler() \{
  @Override
  public Action1<HttpRequest> handle(HttpResponse httpResponse, OperationCredentials credentials) \{
    return null;
  \}
\});
`}
</CodeBlock>
</TabItem>


### JsonContractResolver

The default `JsonContractResolver` used by RavenDB will serialize all properties and all public fields. You can change it by providing own implementation of `DeserializationProblemHandler` class:

<TabItem value="json_contract_resolver" label="json_contract_resolver">
<CodeBlock language="java">
{`conventions.setJsonContractResolver(new CustomJsonContractResolver());
`}
</CodeBlock>
</TabItem>

<TabItem value="custom_json_contract_resolver" label="custom_json_contract_resolver">
<CodeBlock language="java">
{`public static class CustomJsonContractResolver extends DeserializationProblemHandler
\{
  @Override
  public boolean handleUnknownProperty(DeserializationContext ctxt, JsonDeserializer<?> deserializer,
    Object beanOrClass, String propertyName) throws IOException, JsonProcessingException \{
    return super.handleUnknownProperty(ctxt, deserializer, beanOrClass, propertyName);
  \}

\}
`}
</CodeBlock>
</TabItem>

### PreserveDocumentPropertiesNotFoundOnModel

Controls whatever properties that were not de-serialized to an object properties will be preserved 
during saving a document again. If `false`, those properties will be removed when the document will be saved. Default: `true`.

<TabItem value="preserve_doc_props_not_found_on_model" label="preserve_doc_props_not_found_on_model">
<CodeBlock language="java">
{`conventions.setPreserveDocumentPropertiesNotFoundOnModel(true);
`}
</CodeBlock>
</TabItem>


</LanguageContent>

<!---
- [How to send custom request using HttpJsonRequestFactory?](../../how-to/send-custom-request-using-httpjsonrequestfactory)

-->